Front End Assets/scss/modules/_gallery.scss
@import "../variables";
@import "../mixins";      
      
.gallery-filter-wrapper{
        margin: $v-spacing-sm;

        @media #{$media-desktop-view} {
            align-items: center;
            display: flex;
            justify-content: center;
        }
        
        .contest-filter {
            @media #{$media-desktop-view} {
                align-items: center;
                display: flex;
                justify-content: center;
            }

            > span {
                position: relative;


                @media #{$media-mobile-view} {
                    display: block;
                    margin-top: $v-spacing-xs;
                }

                @media #{$media-desktop-view} {
                    display: inline-block;
                    margin-left: $grid-gutter-width-half;
                }
            }
            
            .select {
                font-size: 14px;
                position: relative;
                display: inline-block;
                
                .arr {
                    background: #fff;
                    bottom: 5px;
                    position: absolute;
                    right: 5px;
                    top: 5px;
                    width: 5px;
                    pointer-events: none;
                    
                    &:before {
                        content: '';
                        position: absolute;
                        top: 50%;
                        right: 10px;
                        margin-top: -5px;
                        pointer-events: none;
                        border-top: 10px solid #888;
                        border-left: 10px solid transparent;
                        border-right: 10px solid transparent;
                    }
                    
                    &:after {
                        content: '';
                        position: absolute;
                        top: 50%;
                        right: 15px;
                        margin-top: -5px;
                        pointer-events: none;
                        border-top: 6px solid #fff;
                        border-left: 6px solid transparent;
                        border-right: 6px solid transparent;
                    }
                }
                
                select {
                    outline: none;
                    -webkit-appearance: none;
                    -moz-appearance: none;
                    display: block;
                    padding: 1.2em 3em 1.2em 1.5em;
                    margin: 0;
                    transition: border-color 0.2s;
                    border: 2px solid #9aedd8;
                    border-radius: 5px;
                    background: #fff;
                    color: #888;
                    line-height: normal;
                    font-family: inherit;
                    font-size: inherit;
                    line-height: inherit;
                    
                    &::-ms-expand {
                        display: none;
                    }
                }

            }
        }
}

.gallery{
    .brick {
        width: 300px;
    }
    
    .gallery-image-item{
        img{
            margin:auto;
        }
        
        
        .header{
            margin:10px 0;
            text-align: center;
        }
        
        .description{
            margin:10px 0;
            text-align: center;
           
        }
    }
}

